kubectl_deploy/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intranet-archive-dev-ingress
  namespace: intranet-archive-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: intranet-archive-dev-ingress-intranet-archive-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: default
  tls:
  - hosts:
    - dev-intranet-archive.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: dev-intranet-archive.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: intranet-archive-service
            port:
              number: 8080
